--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~ngx-toastr/toastr';
+body{
+
+    background: #2193b0;
+    background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);  
+    background: linear-gradient(to right, #6dd5ed, #2193b0); 
+
+
+  /*  background-image: url('./assets/img/empleados.jpg');*/
+   
+    
+
+}
